; ModuleID = '/home/carl/AnghaBench/anypixel/firmware/controller/src/extr_main.c_globalSet.c'
source_filename = "/home/carl/AnghaBench/anypixel/firmware/controller/src/extr_main.c_globalSet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

@ledpackets = common dso_local global %struct.TYPE_4__* null, align 8
@panelLEDmap = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @globalSet(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %11 = load i32, i32* %3, align 4
  %12 = sdiv i32 %11, 3
  %13 = sdiv i32 %12, 14
  store i32 %13, i32* %5, align 4
  %14 = load i32, i32* %3, align 4
  %15 = sdiv i32 %14, 3
  %16 = srem i32 %15, 14
  store i32 %16, i32* %6, align 4
  %17 = load i32, i32* %3, align 4
  %18 = srem i32 %17, 3
  store i32 %18, i32* %7, align 4
  %19 = load i32, i32* %5, align 4
  %20 = srem i32 %19, 7
  store i32 %20, i32* %8, align 4
  %21 = load i32, i32* %6, align 4
  %22 = srem i32 %21, 7
  store i32 %22, i32* %9, align 4
  %23 = load i32, i32* %5, align 4
  %24 = sdiv i32 %23, 7
  %25 = mul nsw i32 %24, 2
  %26 = load i32, i32* %6, align 4
  %27 = sdiv i32 %26, 7
  %28 = add nsw i32 %25, %27
  store i32 %28, i32* %10, align 4
  %29 = load %struct.TYPE_4__*, %struct.TYPE_4__** @ledpackets, align 8
  %30 = load i32, i32* %10, align 4
  %31 = sext i32 %30 to i64
  %32 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %29, i64 %31
  %33 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %32, i32 0, i32 0
  %34 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  %36 = load i32*, i32** @panelLEDmap, align 8
  %37 = load i32, i32* %8, align 4
  %38 = mul nsw i32 %37, 7
  %39 = load i32, i32* %9, align 4
  %40 = add nsw i32 %38, %39
  %41 = mul nsw i32 %40, 3
  %42 = load i32, i32* %7, align 4
  %43 = add nsw i32 %41, %42
  %44 = sext i32 %43 to i64
  %45 = getelementptr inbounds i32, i32* %36, i64 %44
  %46 = load i32, i32* %45, align 4
  %47 = load i32, i32* %4, align 4
  %48 = call i32 @pack12bit(i32 %35, i32 %46, i32 %47)
  ret void
}

declare dso_local i32 @pack12bit(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
